# vfxvox-pipeline-utils

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  setup.py  test_compatibility.py  tox.ini
examples/: TEST_SCENARIOS.md  lint_usd_custom.py  pipeline_integration.py  shotlint_example.py  studio_rules.yaml  validate_sequence.py
examples/vfx_project/: README.md  shotlint_rules.yaml  shotlint_rules_minimal.yaml  shotlint_rules_strict.yaml
examples/vfx_project/assets/characters/: .gitkeep
examples/vfx_project/assets/environments/: .gitkeep
examples/vfx_project/seq_010/shot_010/assets/: .gitkeep
examples/vfx_project/seq_010/shot_010/comp/v001/: .gitkeep
examples/vfx_project/seq_010/shot_010/comp/v002/: .gitkeep
examples/vfx_project/seq_010/shot_010/plate/: .gitkeep
examples/vfx_project/seq_010/shot_020/comp/v001/: .gitkeep
tests/: README.md  conftest.py
tests/fixtures/: shotlint_rules.yaml
tests/test_sequences/: __init__.py  test_formats.py  test_scanner.py  test_validator.py
tests/test_shotlint/: __init__.py  test_engine.py  test_plugins.py  test_rules.py  test_validator.py
vfxvox_pipeline_utils/: __init__.py  logo.py
vfxvox_pipeline_utils/cli/: __init__.py  main.py  sequence_cmd.py  shotlint_cmd.py  usd_cmd.py
vfxvox_pipeline_utils/core/: __init__.py  config.py  exceptions.py  logging.py  validators.py
vfxvox_pipeline_utils/plugins/: __init__.py
vfxvox_pipeline_utils/plugins/adapters/: __init__.py  adapter_utils.py  base_adapter.py
vfxvox_pipeline_utils/plugins/config/: __init__.py  plugin_config.yaml  validator_profiles.yaml
vfxvox_pipeline_utils/plugins/core/: __init__.py  context.py  exceptions.py  plugin_manager.py  session_manager.py  validator_interface.py
vfxvox_pipeline_utils/plugins/ui/: __init__.py
vfxvox_pipeline_utils/plugins/validators/: __init__.py
vfxvox_pipeline_utils/sequences/: __init__.py  formats.py  reporters.py  scanner.py  validator.py
vfxvox_pipeline_utils/shotlint/: README.md  __init__.py  engine.py  plugins.py  reporters.py  rules.py  validator.py
vfxvox_pipeline_utils/usd/: __init__.py  custom_rules.py  linter.py  reporters.py  rules.py
